<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".AboutActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_about_photo"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_margin="36dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/about_me"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/about_name"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColorLink="@android:color/holo_blue_bright"
            android:autoLink="email"
            android:linksClickable="true"
            android:text="@string/about_email"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:layout_marginBottom="42dp"
            android:text="@string/about_credit"
            android:textAlignment="center"/>
    </LinearLayout>

</ScrollView>